chapter07/go/begin/appointments/config/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: appointments
  labels:
    app: appointments
spec:
  replicas: 1
  selector:
    matchLabels:
      app: appointments
  template:
    metadata:
      labels:
        app: appointments
    spec:
      containers:
        - name: appointments
          image: ko.local/appointments:0.0.1-SNAPSHOT
          #image: ko://github.com/devex-on-k8s/book/appointments
          imagePullPolicy: IfNotPresent
          securityContext:
            runAsUser: 1001
          lifecycle:
            preStop:
              sleep:
                seconds: 5
          ports:
            - containerPort: 8081
          resources:
            requests:
              cpu: "0.1"
              memory: "150Mi"
            limits:
              memory: "500Mi"
