chapter07/go/begin/appointments/config/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: appointments
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: appointments
                port:
                  number: 8081
